split headers, remove multithread socket read, tcp as RAII, fix compile warnings, fix help info, fix non-protocol url, fix error handling, fix cout-cerr msgs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.5)
 project(simple_curl)
 
-set(CMAKE_CXX_STANDARD 14)
-set(CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_REQUIRED_FLAGS -std=c++17)
 set(COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra")
 set(CMAKE_CXX_FLAGS -pthread)
 set(CMAKE_CXX_COMPILER g++)
@@ -13,15 +14,11 @@ add_executable(simple_curl
     main.cpp
 )
 
-add_library(tcp
+add_library(http
+        http.cpp
         tcp.cpp
 )
 
-add_library(http
-        http.cpp
-)
-
 target_link_libraries(simple_curl
-        tcp
         http
 )
