add simple benchmark

--- a/2022_regexp/Makefile
+++ b/2022_regexp/Makefile
@@ -1,5 +1,7 @@
 CC=g++
 CFLAGS=-c -Wall
+SRCDIR=./src
+TESTDIR=./tests
 
 all: clean main
 
@@ -7,10 +9,16 @@ main: main.o clogreader.o
 	$(CC) clogreader.o main.o -o main
  
 clogreader.o:
-	$(CC) $(CFLAGS) ./src/CLogReader.cpp
+	$(CC) $(CFLAGS) $(SRCDIR)/CLogReader.cpp
 
 main.o:
-	$(CC) $(CFLAGS) ./src/main.cpp
+	$(CC) $(CFLAGS) $(SRCDIR)/main.cpp
+
+perf: clogreader.o perf.o
+	$(CC) clogreader.o perf.o -o perf && ./perf 2>/dev/null
+
+perf.o:
+	$(CC) $(CFLAGS) $(TESTDIR)/perf.cpp
 
 clean:
-	rm CLogReader.o main.o main
+	rm -f CLogReader.o main.o main perf.o perf
