remove unused main, cleanup Makefile

--- a/2022_regexp/Makefile
+++ b/2022_regexp/Makefile
@@ -3,16 +3,12 @@ CFLAGS=-c -Wall
 SRCDIR=./src
 TESTDIR=./tests
 
-all: clean main
+all: clean test
 
-main: main.o clogreader.o
-	$(CC) clogreader.o main.o -o main
- 
+test: perf matches
+
 clogreader.o:
 	$(CC) $(CFLAGS) $(SRCDIR)/CLogReader.cpp
-
-main.o:
-	$(CC) $(CFLAGS) $(SRCDIR)/main.cpp
 
 perf: clogreader.o perf.o
 	$(CC) clogreader.o perf.o -o perf && ./perf 2>/dev/null
@@ -27,4 +23,4 @@ matches.o:
 	$(CC) $(CFLAGS) $(TESTDIR)/matches.cpp
 
 clean:
-	rm -f CLogReader.o main.o main perf.o perf matches.o matches
+	rm -f CLogReader.o perf.o perf matches.o matches
