add basic regexp matcher for baseline (copypaste), colorize output

--- a/2022_regexp/Makefile
+++ b/2022_regexp/Makefile
@@ -5,7 +5,7 @@ TESTDIR=./tests
 
 all: clean test
 
-test: test_matcher test_perf test_clogreader 
+test: test_matcher test_perf_matcher test_perf test_clogreader 
 
 clogreader.o: matcher.o
 	$(CC) $(CFLAGS) $(SRCDIR)/CLogReader.cpp -o clogreader.o
@@ -31,5 +31,11 @@ test_matcher: test_matcher.o matcher.o
 test_matcher.o:
 	$(CC) $(CFLAGS) $(TESTDIR)/matcher.cpp -o test_matcher.o
 
+test_perf_matcher: test_perf_matcher.o matcher.o
+	$(CC) matcher.o test_perf_matcher.o -o test_perf_matcher && ./test_perf_matcher 2>/dev/null
+
+test_perf_matcher.o:
+	$(CC) $(CFLAGS) $(TESTDIR)/perf_matcher.cpp -o test_perf_matcher.o
+
 clean:
-	rm -f clogreader.o matcher.o test_perf.o test_perf test_clogreader.o test_clogreader test_matcher.o test_matcher
+	rm -f clogreader.o matcher.o test_perf.o test_perf test_perf_matcher test_perf_matcher.o test_clogreader.o test_clogreader test_matcher.o test_matcher
